build: avoid Java version mismatch (#433)
When developing, the build (both on the command-line and in the IDE)
frequently fails due to usage of unsupported Java language features for
the target Java runtime. This is due to the the Java source version
being set to a newer version than the target Java version. While this
sometimes works, this combination is explicitly disallowed by the Java
compiler. Source version must be equal to or less than the target
version.

This change uses the correct Java toolchain version for each
sub-project. The exception being the core sub-project, since it targets
Java 8 whereas ANTLR requires Java 11+ to run. Instead, the Java
compiler release option is set to Java 8, ensuring that Java 8 bytecode
is produced and that no APIs not present in Java 8 are used.

While numerous code changes are required to adhere to the target Java
language version, there are no functional changes.